force-app/main/default/objects/Mosaic_Account360__dlm/fields/Avg_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Avg_Order_Value__c</fullName>
    <label>Avg_Order_Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Avg_Order_Value</labelOverride>
        <masterLabel>Avg_Order_Value</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>