force-app/main/default/objects/Mosaic_Account360__dlm/fields/KQ_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>KQ_Account_ID__c</fullName>
    <label>Key Qualifier Account_ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier Account_ID</labelOverride>
        <masterLabel>Key Qualifier Account_ID</masterLabel>
        <refAttrDeveloperName>KQ_Account_ID</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>